--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -71,7 +71,7 @@
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintStart_toEndOf="@+id/btnOperacionesBasicas"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -87,12 +87,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="87dp"
+        android:id="@+id/btnOperacionesBasicas"
+        android:layout_width="200dp"
+        android:layout_height="81dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="236dp"
-        android:text="Button"
+        android:text="Operaciones Básicas"
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
