--- a/app/src/main/res/layout/activity_comprobacion_de_primos.xml
+++ b/app/src/main/res/layout/activity_comprobacion_de_primos.xml
@@ -78,4 +78,14 @@
         android:textColor="#27272B"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btn_regresar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="279dp"
+        android:layout_marginBottom="17dp"
+        android:text="Regresar" />
 </RelativeLayout>
