Botones regresar con encadenado a Trinomio

--- a/app/src/main/res/layout/activity_tinomio_cuadrado_perfecto.xml
+++ b/app/src/main/res/layout/activity_tinomio_cuadrado_perfecto.xml
@@ -50,10 +50,24 @@
         android:id="@+id/bttcalcular"
         android:layout_width="175dp"
         android:layout_height="75dp"
-        android:layout_marginStart="136dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginStart="228dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Calcular"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        app:backgroundTint="#0E4CAA"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/bttregresarOper"
+        android:layout_width="132dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="40dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="REGRESAR"
         android:textAllCaps="true"
         android:textStyle="bold"
         app:backgroundTint="#0E4CAA"
