--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -116,6 +116,7 @@
         android:layout_height="73dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="476dp"
+        android:onClick="pitagoras"
         android:text="PITAGORAS"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,10 +136,10 @@
 
     <Button
         android:id="@+id/btnNPrimos"
-        android:layout_width="199dp"
-        android:layout_height="74dp"
+        android:layout_width="170dp"
+        android:layout_height="57dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="548dp"
+        android:layout_marginTop="484dp"
         android:text="NUMEROS PRIMOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -185,20 +186,20 @@
 
     <Button
         android:id="@+id/btn_said"
-        android:layout_width="201dp"
-        android:layout_height="76dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="104dp"
+        android:layout_width="169dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="160dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnPentagono"
-        android:layout_width="197dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="184dp"
+        android:layout_width="160dp"
+        android:layout_height="58dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="176dp"
         android:text="PENTAGONO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
