--- a/app/src/main/res/layout/activity_formula_general.xml
+++ b/app/src/main/res/layout/activity_formula_general.xml
@@ -159,7 +159,7 @@
         tools:text="numero b" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnNumerosPerfectos"
         android:layout_width="215dp"
         android:layout_height="116dp"
         android:layout_marginStart="112dp"
