--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -154,6 +154,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="144dp"
         android:text="Trinomio-Monomio"
+        android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
