--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -190,7 +190,7 @@
         android:layout_height="58dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="160dp"
-        android:text="Button"
+        android:text="COMPROBACION DE PRIMOS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
