--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -136,7 +136,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnNPrimos"
+        android:id="@+id/btnPrimos"
         android:layout_width="198dp"
         android:layout_height="74dp"
         tools:layout_editor_absoluteX="205dp"
