final pq no hay mas y se vaya a dañar

--- a/app/src/main/res/layout/activity_numeros_perfectos.xml
+++ b/app/src/main/res/layout/activity_numeros_perfectos.xml
@@ -17,10 +17,23 @@
         android:src="@drawable/lineas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/btnVolverMenu"
+        android:layout_width="217dp"
+        android:layout_height="63dp"
+        android:text="VOLVER"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.247" />
 
     <TextView
         android:layout_width="211dp"
