--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="71dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="644dp"
+        android:layout_marginTop="620dp"
         android:onClick="fibonacci"
         android:text="FIBONACCI"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,20 +139,13 @@
         android:id="@+id/btnPrimos"
         android:layout_width="198dp"
         android:layout_height="74dp"
-        tools:layout_editor_absoluteX="205dp"
-        tools:layout_editor_absoluteY="477dp" />
-
-    <<<<<<< HEAD
         android:text="Numeros Primos"
-=======
-        android:text="NUMEROS PRIMOS"
->>>>>>> 6898f5ea3cefb6fdcaef31197c0e55804dad56e6
+        app:layout_constraintBottom_toBottomOf="@+id/btn_fibonacci"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/btnPentagono"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="UnknownId" />
+        app:layout_constraintVertical_bias="0.773" />
 
     <Button
         android:id="@+id/btnTrinomio"
@@ -203,7 +196,7 @@
         android:layout_width="204dp"
         android:layout_height="71dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginBottom="112dp"
         android:text="PENTAGONO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
