--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -194,19 +194,20 @@
 
         android:layout_marginStart="4dp"
 
+        android:layout_marginBottom="100dp"
+
+
         android:text="NUMEROS PRIMOS"
-
-
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="552dp" />
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btnPentagono"
         android:layout_width="170dp"
         android:layout_height="84dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="100dp"
         android:text="PENTAGONO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
