CAMBIO DE FONDO

--- a/app/src/main/res/layout/activity_formula_general.xml
+++ b/app/src/main/res/layout/activity_formula_general.xml
@@ -5,7 +5,6 @@
     android:id="@+id/btnregresar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/implementos_escritura_naranja_pizarra"
     tools:context=".FormulaGeneral"
     tools:layout_editor_absoluteX="2dp"
     tools:layout_editor_absoluteY="57dp">
@@ -30,7 +29,7 @@
         android:layout_height="33dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="660dp"
-        android:background="#FFFFFF"
+        android:background="@color/material_dynamic_neutral95"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -86,7 +85,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="332dp"
         android:text="INGRESE EL TERCER NUMERO:"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +98,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="228dp"
         android:text="INGRESE EL SEGUNDO NUMERO:"
-        android:textColor="#F4F4F4"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +112,7 @@
         android:layout_marginEnd="100dp"
         android:text="FRORMULA GENERAL"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +125,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="120dp"
         android:text="INGRESE EL PRIMER NUMERO:"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,27 +158,11 @@
         tools:text="numero b" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="215dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginBottom="204dp"
-        android:background="@android:drawable/ic_menu_send"
-        android:onClick="calculaFormula"
-        android:text="CALCULAR"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:backgroundTint="#722EEC"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
         android:id="@+id/button"
-        android:layout_width="215dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginBottom="204dp"
-        android:background="@android:drawable/ic_menu_send"
+        android:layout_width="179dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginBottom="232dp"
         android:onClick="calculaFormula"
         android:text="CALCULAR"
         android:textSize="20sp"
@@ -192,8 +175,8 @@
         android:id="@+id/btnregresa"
         android:layout_width="127dp"
         android:layout_height="53dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginBottom="160dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginBottom="164dp"
         android:text="REGRESAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
