arreglo de posicion botones y color de texto menu

--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -24,14 +24,13 @@
         android:id="@+id/titleTextView"
         android:layout_width="259dp"
         android:layout_height="63dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="36dp"
         android:text="ELIJA LA OPERACION QUE DESEA REALIZAR"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.572"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,10 +52,10 @@
         android:layout_width="0dp"
         android:layout_height="94dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="124dp"
         android:text="NUMEROS PERFECTOS"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/btnTrinomio"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,21 +65,22 @@
         android:layout_width="0dp"
         android:layout_height="71dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="644dp"
         android:onClick="fibonacci"
         android:text="FIBONACCI"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnformulageneral"
         android:layout_width="0dp"
         android:layout_height="85dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="232dp"
         android:text="FORMULA GENERAL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -92,7 +92,7 @@
         android:layout_width="0dp"
         android:layout_height="71dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="404dp"
+        android:layout_marginTop="416dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -104,7 +104,7 @@
         android:layout_width="0dp"
         android:layout_height="87dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="232dp"
         android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/btnformulageneral"
         app:layout_constraintHorizontal_weight="1"
@@ -116,7 +116,7 @@
         android:layout_width="203dp"
         android:layout_height="73dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="476dp"
+        android:layout_marginTop="496dp"
         android:onClick="pitagoras"
         android:text="PITAGORAS"
         app:layout_constraintHorizontal_weight="1"
@@ -128,7 +128,7 @@
         android:layout_width="0dp"
         android:layout_height="73dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="404dp"
+        android:layout_marginTop="416dp"
         android:text="Operaciones Triangulos"
         app:layout_constraintEnd_toStartOf="@+id/button8"
         app:layout_constraintHorizontal_weight="1"
@@ -140,10 +140,10 @@
         android:layout_width="198dp"
         android:layout_height="74dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="476dp"
+        android:layout_marginTop="496dp"
         android:text="NUMEROS PRIMOS"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.994"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/btnPentagono"
         app:layout_constraintTop_toTopOf="parent"
@@ -154,7 +154,7 @@
         android:layout_width="0dp"
         android:layout_height="94dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="124dp"
         android:text="Trinomio-Monomio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -187,8 +187,8 @@
         android:id="@+id/btn_said"
         android:layout_width="194dp"
         android:layout_height="67dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="84dp"
         android:text="COMPROBACION PRIMOS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -198,9 +198,10 @@
         android:layout_width="204dp"
         android:layout_height="71dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="116dp"
         android:text="PENTAGONO"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.877" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
