--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -18,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/titleTextView"
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="71dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="680dp"
+        android:layout_marginTop="664dp"
         android:onClick="fibonacci"
         android:text="FIBONACCI"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,16 +89,17 @@
 
     <Button
         android:id="@+id/btnIrTrapecio"
-        android:layout_width="202dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="428dp"
+        android:layout_width="197dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="405dp"
         android:text="Trapecio"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/button7"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.748" />
 
     <Button
         android:id="@+id/button3"
@@ -114,48 +115,50 @@
 
     <Button
         android:id="@+id/btnPitagoras"
-        android:layout_width="196dp"
+        android:layout_width="181dp"
         android:layout_height="77dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginTop="496dp"
         android:onClick="pitagoras"
         android:text="PITAGORAS"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/button7"
         android:layout_width="194dp"
         android:layout_height="85dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="412dp"
+        android:layout_marginTop="404dp"
         android:text="OPERACIONES TRIANGULOS"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <Button
         android:id="@+id/btnNPrimos"
-        android:layout_width="192dp"
-        android:layout_height="78dp"
-        android:layout_marginTop="504dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="184dp"
+        android:layout_height="79dp"
         android:text="NUMEROS PRIMOS"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toStartOf="@+id/btnPitagoras"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.78"
         tools:ignore="UnknownId" />
 
     <Button
         android:id="@+id/btnPentagono"
-        android:layout_width="191dp"
-        android:layout_height="74dp"
+        android:layout_width="189dp"
+        android:layout_height="90dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="584dp"
+        android:layout_marginTop="576dp"
         android:text="PENTAGONO"
         app:layout_constraintEnd_toStartOf="@+id/btnNPrimos"
-        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -175,7 +178,7 @@
         android:layout_width="0dp"
         android:layout_height="89dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="316dp"
         android:text="Operacion Factorial"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -196,12 +199,14 @@
 
     <Button
         android:id="@+id/btn_said"
-        android:layout_width="191dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="240dp"
-        android:layout_marginBottom="216dp"
+        android:layout_width="175dp"
+        android:layout_height="93dp"
         android:text="COMPROBACION DE PRIMOS"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.619" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
